Fixed a spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,7 @@
   background-color: whitesmoke;
   /* border:solid black; */
   color: black;
-  width: 50%;
+  width: 60%;
   text-align: center;
   margin: auto;
   padding-bottom: 10px;
